--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Virtual Event</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='./styles.css'>
+  <script src="https://kit.fontawesome.com/85a89982a4.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class='container'>
@@ -15,6 +16,55 @@
         La experiencia de un Unicornio de Latam</p>
       <p class='sub-title'>Miércoles 16 de diciembre | 17 hs (Horario de Quito)</p>
     </header>
+    <section class='main-content'>
+      <div class='left-content'>
+        <img src="./assets/Group 5.jpg" alt="">
+        <p>e invitan este webinar, donde trataremos la temática de cómo humanizar la experiencia del cliente de Banca y Seguros en el nuevo entorno digital.
+ 
+          Además podremos conocer las estrategias que aplicó LOREM para generar una experiencia memorable para sus clientes, mientras se convertía en el gran Unicornio de LATAM.
+          
+          Escucha de primera mano la voz de nuestros especialistas:
+        </p>
+        <div class='card'>
+          <img src="./assets/prado.svg" alt="">
+        </div>
+        <div class='card'>
+          <img src="./assets/prado.svg" alt="">
+        </div>
+        <div class='card'>
+          <img src="./assets/prado.svg" alt="">
+        </div>
+        <div class='card'>
+          <img src="./assets/prado.svg" alt="">
+        </div>
+        <p>Participa e inspírate para innovar y mejorar la interacción entre clientes y marcas con historias de éxito de empresas del ámbito financiero en América Latina.
+
+          ¡Te esperamos!
+        </p>
+        <img src="./assets/Group 5.jpg" alt="">
+      </div>
+      <div class='form'>
+        <h2>¡Inscríbete y reserva tu lugar ahora!</h2>
+        <input type="text" />
+        <input type="text" />
+        <input type="text" />
+        <input type="text" />
+        <input type="text" />
+        <input type="text" />
+        <button>Inscribete</button>
+      </div>
+    </section>
+    <footer>
+      <p>©  2020</p>
+      <div>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-snapchat-ghost"></i>
+    </div>
+    </footer>
   </div>
 </body>
 </html>
