--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
         </p>
         <img src="./assets/Group 5.jpg" alt="">
       </div>
-      <div class='form'>
+      <div id='form' class='form'>
         <h2>¡Inscríbete y reserva tu lugar ahora!</h2>
-        <input type="text" />
-        <input type="text" />
-        <input type="text" />
-        <input type="text" />
-        <input type="text" />
-        <input type="text" />
-        <button>Inscribete</button>
+        <input type="text" id='first-name' />
+        <input type="text" id='sur-name'/>
+        <input type="text" id='mail'/>
+        <input type="text" id='country'/>
+        <input type="text" id='phone'/>
+        <input type="text" id='job'/>
+        <button id='submit-button'>Inscribete</button>
       </div>
     </section>
     <footer>
@@ -66,5 +66,6 @@
     </div>
     </footer>
   </div>
+  <script type="module" src="./src/index.js"></script>
 </body>
 </html>
