--- a/index.html
+++ b/index.html
@@ -45,13 +45,21 @@
       </div>
       <div id='form' class='form'>
         <h2>¡Inscríbete y reserva tu lugar ahora!</h2>
-        <input type="text" id='first-name' />
-        <input type="text" id='sur-name'/>
-        <input type="text" id='mail'/>
-        <input type="text" id='country'/>
-        <input type="text" id='phone'/>
-        <input type="text" id='job'/>
-        <button id='submit-button'>Inscribete</button>
+        <div class="inputs">
+          <label for="first-name">Nombre</label>
+          <input type="text" id='first-name' />
+          <label for="sur-name">Apellido</label>
+          <input type="text" name='sur-name' id='sur-name'/>
+          <label for="mail">Correo electronico del trabajo</label>
+          <input type="text" name='mail' id='mail'/>
+          <label for="country">Pais</label>
+          <input type="text" name='country' id='country'/>
+          <label for="phone">Numero de telefono</label>
+          <input type="text" name='phone' id='phone'/>
+          <label for="job">Puesto de trabajo</label>
+          <input type="text" name='job' id='job'/>
+          <button id='submit-button'>Inscribete</button>
+        </div>
       </div>
     </section>
     <footer>
