--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <section class='main-content'>
       <div class='left-content'>
         <img src="./assets/Group 5.jpg" alt="">
-        <p>e invitan este webinar, donde trataremos la temática de cómo humanizar la experiencia del cliente de Banca y Seguros en el nuevo entorno digital.
+        <p class='text-content'>Te invitan este webinar, donde trataremos la temática de cómo humanizar la experiencia del cliente de Banca y Seguros en el nuevo entorno digital.<br>
  
-          Además podremos conocer las estrategias que aplicó LOREM para generar una experiencia memorable para sus clientes, mientras se convertía en el gran Unicornio de LATAM.
+          <br><br>Además podremos conocer las estrategias que aplicó LOREM para generar una experiencia memorable para sus clientes, mientras se convertía en el gran Unicornio de LATAM.<br><br>
           
           Escucha de primera mano la voz de nuestros especialistas:
         </p>
@@ -37,7 +37,7 @@
         <div class='card'>
           <img src="./assets/prado.svg" alt="">
         </div>
-        <p>Participa e inspírate para innovar y mejorar la interacción entre clientes y marcas con historias de éxito de empresas del ámbito financiero en América Latina.
+        <p class='text'>Participa e inspírate para innovar y mejorar la interacción entre clientes y marcas<br> con historias de éxito de empresas del ámbito financiero en América Latina.<br><br>
 
           ¡Te esperamos!
         </p>
@@ -65,12 +65,12 @@
     <footer>
       <p>©  2020</p>
       <div>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-youtube"></i>
-        <i class="fab fa-linkedin"></i>
-        <i class="fab fa-snapchat-ghost"></i>
+        <i class="fab fa-twitter fa-2x"></i>
+        <i class="fab fa-facebook fa-2x"></i>
+        <i class="fab fa-instagram fa-2x"></i>
+        <i class="fab fa-youtube fa-2x"></i>
+        <i class="fab fa-linkedin fa-2x"></i>
+        <i class="fab fa-snapchat-ghost fa-2x"></i>
     </div>
     </footer>
   </div>
