--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <div class='container'>
     <header class='header'>
       <button class='webinar-button'>WEBINAR</button>
-      <p class='title'>El reto de humanizar el CX financiero en 2021. 
+      <p class='title'>El reto de humanizar el CX financiero en 2021.<br>
         La experiencia de un Unicornio de Latam</p>
       <p class='sub-title'>Miércoles 16 de diciembre | 17 hs (Horario de Quito)</p>
     </header>
     <section class='main-content'>
       <div class='left-content'>
-        <img src="./assets/Group 5.jpg" alt="">
+        <img src="./assets/Group 5.jpg" class='logo-img' alt="">
         <p class='text-content'>Te invitan este webinar, donde trataremos la temática de cómo humanizar la experiencia del cliente de Banca y Seguros en el nuevo entorno digital.<br>
  
           <br><br>Además podremos conocer las estrategias que aplicó LOREM para generar una experiencia memorable para sus clientes, mientras se convertía en el gran Unicornio de LATAM.<br><br>
@@ -41,7 +41,7 @@
 
           ¡Te esperamos!
         </p>
-        <img src="./assets/Group 5.jpg" alt="">
+        <img src="./assets/Group 5.jpg" class='logo-img' alt="">
       </div>
       <div id='form' class='form'>
         <h2>¡Inscríbete y reserva tu lugar ahora!</h2>
