--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <script src="https://kit.fontawesome.com/85a89982a4.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<div id="my-modal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Muchas gracias por su interes!</p>
+  </div>
+</div>
   <div class='container'>
     <header class='header'>
       <button class='webinar-button'>WEBINAR</button>
